# fuzzy-c-means

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CLI.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml  tox.ini
.github/workflows/: ci.yml  publish-package-on-release.yaml  publish.yml  release.yml
CHANGELOG/: index.html
CLI/: index.html
citation/: index.html
contributing/: index.html
docs/: CHANGELOG.md  CLI.md  citation.md  conf.py  contributing.md  getting-started.md  index.md  index.rst  reference.md  requirements.txt
docs/examples/: 00 - Basic clustering.ipynb  01 - Colour quantization.ipynb  02 - Clustering validation.ipynb  03 - Using different distances.ipynb
examples/: 00 - Basic clustering.ipynb  01 - Colour quantization.ipynb  02 - Clustering validation.ipynb
examples/00 - Basic clustering/: index.html
examples/01 - Colour quantization/: index.html
examples/02 - Clustering validation/: index.html
fcmeans/: __init__.py  _jax.py  _numpy.py  cli.py  fcm.py  jax.py  main.py  my_typing.py  numpy.py
fuzzy-c-means/: __init__.py
getting-started/: index.html
reference/: index.html
search/: search_index.json
tests/: __init__.py  test_fcm.py  test_sample.py
