[tool.poetry]
name = "fuzzy-c-means"
version = "1.6.4"
description = "A simple python implementation of Fuzzy C-means algorithm."
authors = ["Madson Dias <madsonddias@gmail.com>"]


license = "MIT"
readme = "README.md"
documentation = "https://fuzzy-c-means.readthedocs.io/en/latest/"
repository = "https://github.com/omadson/fuzzy-c-means"
keywords = ["machine-learning", "data-science", "fuzzy-c-means", "clustering"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

packages = [
    { include = "fcmeans" }
]


[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.1"
tabulate = "^0.8.9"
typer = "^0.4.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
matplotlib = "^3.4.3"
jupyterlab = "^3.1.9"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
python-semantic-release = "^7.25.0"
black = {version = "^22.1.0", extras = ["jupyter"]}
interrogate = "^1.5.0"
mkdocs = "^1.2.3"
mkdocs-material = "^8.2.1"
mkdocs-jupyter = "^0.20.0"
mkdocstrings = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fcm = 'fcmeans.cli:app'

[tool.semantic_release]
version_variable = [
    'fcmeans/__init__.py:__version__',
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "poetry build"
changelog_file = "docs/CHANGELOG.md"

[mypy]
plugins = ['numpy.typing.mypy_plugin']

[tool.coverage.report]
omit = ['fcmeans/my_typing.py', 'fcmeans/__init__.py', 'fcmeans/cli.py']
fail_under = 70

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 95
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 2
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
