[project]
name = "fuzzy-c-means"
version = "1.7.4"
description = "A simple python implementation of Fuzzy C-means algorithm."
authors = [{ name = "Madson Dias", email = "madsonddias@gmail.com" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "MIT"
keywords = [
    "machine-learning",
    "data-science",
    "fuzzy-c-means",
    "clustering",
]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=1.21.1,<2",
    "tabulate>=0.8.9,<1",
    "tqdm>=4.64.1,<5",
    "joblib>=1.2.0,<2",
    "pydantic>=2.6.4,<3",
    "typer>=0.9.0,<0.10",
]

[project.urls]
Repository = "https://github.com/omadson/fuzzy-c-means"
Documentation = "https://fuzzy-c-means.readthedocs.io/en/latest/"

[project.scripts]
fcm = "fcmeans.cli:app"

[dependency-groups]
dev = [
    "pre-commit>=3.6.2,<4",
    "matplotlib>=3.8.3,<4",
    "jupyterlab>=4.1.5,<5",
    "pytest>=8.1.1,<9",
    "pytest-cov>=4.1.0,<5",
    "flake8>=7.0.0,<8",
    "isort>=5.13.2,<6",
    "mypy>=1.9.0,<2",
    "python-semantic-release>=9.2.0,<10",
    "black>=24.3.0,<25",
    "interrogate>=1.5.0,<2",
    "mkdocs>=1.5.3,<2",
    "mkdocs-material>=9.5.14,<10",
    "mkdocs-jupyter>=0.24.6,<0.25",
    "mkdocstrings>=0.24.1,<0.25",
    "mkdocstrings-python-legacy>=0.2.3,<0.3",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["fcmeans"]
module-root = ""
source-include = ["LICENSE"]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"


[tool.semantic_release]
version_variables = [
    'fcmeans/__init__.py:__version__',
]
version_toml = ["pyproject.toml:project.version"]
[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false
build_command = ""

[tool.semantic_release.publish]
upload_to_vcs_release = true

[tool.semantic_release.changelog]
changelog_file = "docs/CHANGELOG.md"

[mypy]
plugins = ['numpy.typing.mypy_plugin']

[tool.coverage.report]
omit = ['fcmeans/my_typing.py', 'fcmeans/__init__.py', 'fcmeans/cli.py']
fail_under = 70

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 95
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 2
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
